Fixed #2039 - ScrollPanel pushes content to the left in order to show scrollbar

--- a/src/components/scrollpanel/ScrollPanel.css
+++ b/src/components/scrollpanel/ScrollPanel.css
@@ -12,7 +12,7 @@
     width: calc(100% + 18px);
     padding: 0 18px 18px 0;
     position: relative;
-    overflow: auto;
+    overflow: scroll;
     box-sizing: border-box;
 }
 
